--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/app.js",
-    "start": "node src.app.js",
+    "start": "node src/app.js",
     "prod": "pm2 src/app.js"
   },
   "keywords": [],
