--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "crypto": "^1.0.1",
+    "dot-env": "^0.0.1",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http-status": "^2.1.0",
     "mongoose": "^8.16.0",
