--- a/frontend/basic_app/package.json
+++ b/frontend/basic_app/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
     "axios": "^1.10.0",
+    "dotenv": "^16.5.0",
     "http-status": "^2.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
